--- a/package.json
+++ b/package.json
@@ -9,19 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@hookform/resolvers": "^3.9.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.1.2"
+    "react-native-web": "~0.19.10",
+    "react-native-websockets": "^1.0.8",
+    "react-redux": "^9.1.2",
+    "sockjs-client": "^1.6.1",
+    "stomp-client": "^0.9.0",
+    "text-encoding": "^0.7.0",
+    "websocket": "^1.0.35",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
